Actulisacion swger
