# app/Http/Controllers/Controller.php
@@ -2,24 +2,22 @@
 
 namespace App\Http\Controllers;
 /**
-* @OA\Info(
-*             title="API ", 
-*             version="1.0",
-*             description="Listado de los productos extras"
-* )
-*)
-*
-* @OA\Server(url="http://localhost:8000")
-*/
-/*
-*@OA\SecurityScheme(
-* type="apikey",
-*  in="header",
- *  securityScheme="bearer_token",
-  *  name="Authorization",
-   *  description="Sanctum API token. Ejemplo: 'Bearer {token) ' ",
-      *) 
-*/
+ * @OA\Info(
+ *   title="API ",
+ *   version="1.0",
+ *   description="Listado de los productos extras"
+ * )
+ *
+ * @OA\Server(url="http://localhost:8000")
+ *
+ * @OA\SecurityScheme(
+ *   securityScheme="bearerAuth",
+ *   type="http",
+ *   scheme="bearer",
+ *   bearerFormat="Bearer",
+ *   description="Use: Bearer {token}"
+ * )
+ */
 
 
 
